page inscription form

--- a/src/View/Admin/Includes/_navbar.html.twig
+++ b/src/View/Admin/Includes/_navbar.html.twig
@@ -9,6 +9,7 @@
                 <a class="button-navbar" href="/AdminCourse/course">Cours</a>
                 <a class="button-navbar" href="">Stages</a>
                 <a class="button-navbar" href="/AdminCourseInscription/inscription">Inscription Cours</a>
+                <a class="button-navbar" href="/AdminStageInscription/inscription">Inscription Stages</a>
             </div>
         </div>
     </div>
