--- a/src/View/Admin/Includes/_navbar.html.twig
+++ b/src/View/Admin/Includes/_navbar.html.twig
@@ -7,7 +7,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="button-navbar" href="/AdminCourse/course">Cours</a>
-                <a class="button-navbar" href="">Stages</a>
+                <a class="button-navbar" href="/AdminStage/stage">Stages</a>
                 <a class="button-navbar" href="/AdminCourseInscription/inscription">Inscription Cours</a>
             </div>
         </div>
