--- a/src/View/User/Includes/_inscription_form_course.html.twig
+++ b/src/View/User/Includes/_inscription_form_course.html.twig
@@ -19,7 +19,7 @@
             <span class="fst-italic">champs obligatoires</span>
         </p>
         <div>
-            <form class="form-course" method="POST" novalidate>
+            <form class="form-course" method="POST">
                 <div class="mb-3 field">
                     <label for="firstname" class="form-label">
                         <span class="text-danger">*</span>Prénom de l'enfant :</label>
