--- a/src/View/Admin/stage.html.twig
+++ b/src/View/Admin/stage.html.twig
@@ -8,5 +8,6 @@
     <main>
         <h1>Administration: Stages</h1>
         {% include 'Admin/Includes/_formulary_stage.html.twig' %}
-    </main>
+        {% include 'Admin/Includes/_show_stages.html.twig' %}
+     </main>
 {% endblock %}
