--- a/src/View/Admin/Includes/_show_stages.html.twig
+++ b/src/View/Admin/Includes/_show_stages.html.twig
@@ -1,5 +1,5 @@
-<div class='container mt-5'>
-    <table class="table table-striped table-hover">
+<div class="container mt-5 pt-5">
+    <table class="table table-striped table-hover text-center align-middle">
     <thead>
         <tr>
             <th scope="col">Nom du stage</th>
@@ -18,7 +18,12 @@
                 <td>{{ stage.ending_day | date('d/m/Y') }}</td>
                 <td>{{ stage.capacity }}</td>
                 <td>{{ stage.age }}</td>
-                <td></td>
+                <td>
+                    <a class="btn btn-sm btn-secondary mb-1 col-8" href="/AdminStage/edit/{{ stage.id }}">Editer</a>
+                        <form action="/adminStage/delete/{{stage.id}}" method="POST" onSubmit="return confirm('Voulez-vous supprimer ?');">
+                        <button class="btn btn-sm btn-danger mb-1 col-8">Supprimer</button>
+                    </form>
+                </td>
             </tr>
         {% endfor %}
     </tbody>
