--- a/src/View/User/Includes/_contact_grey_block.html.twig
+++ b/src/View/User/Includes/_contact_grey_block.html.twig
@@ -2,17 +2,17 @@
     <div class="grey-block col-xl-7 m-0 col-sm-12">
         <form class="contact-grey-title" method="POST">
             <div class="contact-grey-section">
-            {% if errors %}
-                <ul class="alert alert-danger error">
-                    {% for error in errors %}
-                        <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-            {% elseif errors is empty and data is null %}
-                <ul class="alert alert-success validated">
-                    <li>{{ success }}</li>
-                </ul>
-            {% endif %}
+                {% if errors %}
+                    <ul class="alert alert-danger error">
+                        {% for error in errors %}
+                            <li>{{ error }}</li>
+                        {% endfor %}
+                    </ul>
+                {% elseif errors is empty and data is null %}
+                    <ul class="alert alert-success validated">
+                        {{ success }}
+                    </ul>
+                {% endif %}
                 <div class="mb-3">
                     <label for="lastname" class="form-label">
                         <span class="text-danger">*</span>Nom</label>
@@ -26,7 +26,7 @@
                 <div class="mb-3">
                     <label for="phone" class="form-label">
                         <span class="text-danger">*</span>Téléphone</label>
-                    <input type="text" class="form-control" id="phone" name="phone" placeholder="06.00.00.00.00." aria-required="true">
+                    <input type="tel" class="form-control" id="phone" name="phone" placeholder="06.00.00.00.00." aria-required="true">
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">
@@ -34,7 +34,7 @@
                     <input type="email" class="form-control" id="email" name="email" placeholder="jean.tie@poney.com" aria-required="true">
                 </div>
                 <div class="mb-3">
-                    <label for="email" class="form-label">
+                    <label for="message" class="form-label">
                         <span class="text-danger">*</span>Message</label>
                     <textarea class="form-control" id="message" name="message" placeholder="Bonjour, ..." rows="3" aria-required="true"></textarea>
                 </div>
