--- a/src/View/User/Includes/_stage_white_block.html.twig
+++ b/src/View/User/Includes/_stage_white_block.html.twig
@@ -13,5 +13,6 @@
         <div class='carousel'>
             {% include 'User/Includes/_carousel.html.twig' %}
         </div>
+        {% include "User/Includes/_show_stages.html.twig" %}
     </div>
 {% endblock %}
