--- a/src/View/Admin/Includes/_navbar.html.twig
+++ b/src/View/Admin/Includes/_navbar.html.twig
@@ -6,6 +6,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
+                <a class="button-navbar" href="/haras/haras">Retour Haras</a>
                 <a class="button-navbar" href="/AdminCourse/course">Cours</a>
                 <a class="button-navbar" href="/AdminStage/stage">Stages</a>
                 <a class="button-navbar" href="/AdminCourseInscription/inscription">Inscription Cours</a>
