Lorem ipsum stage page

--- a/src/View/User/Includes/_stage_grey_block.html.twig
+++ b/src/View/User/Includes/_stage_grey_block.html.twig
@@ -5,15 +5,17 @@
                 CONDITIONS
             </h2>
             <p class="grey-block-text">
-                Lorem ipsum dolor sit amet. Sed doloribus id eligendi rerum eos impedit dolore eos excepturi quisquam et corporis Quis At sunt voluptatem ex ullam dolorum. Et corrupti tempore id voluptatibus atque eos itaque enim non impedit laudantium est excepturi sunt et quia saepe! Non accusantium quia id culpa iure sed fugiat optio a reiciendis ipsum eum sunt nostrum.
-            </p>
+                A partir de 18 mois pour le Baby-Poney, jusqu'à un haut niveau d'équitation. Équipement obligatoire prêté par le Haras pour les plus petits. Pantalon long, bottes et casque/bombe obligatoire pour les plus grands.             </p>
         </div>
         <div class="grey-block-content">
             <h2 class="grey-block-title">
                 INSCRIPTION
             </h2>
             <p class="grey-block-text">
-                Lorem ipsum dolor sit amet. Sed doloribus id eligendi rerum eos impedit dolore eos excepturi quisquam et corporis Quis At sunt voluptatem ex ullam dolorum. Et corrupti tempore id voluptatibus atque eos itaque enim non impedit laudantium est excepturi sunt et quia saepe! Non accusantium quia id culpa iure sed fugiat optio a reiciendis ipsum eum sunt nostrum.
+                Vous souhaitez découvrir le poney, apprendre le dressage de poney tout en s'amusant, ou vous initier au trot et au galop pour les plus jeunes?
+                Vous souhaitez apprendre la cavalerie, panser, seller, monter à cheval ou encore faire de la compétition ?
+                Le Haras du Val de Loire est l'endroit idéal !
+                Pour les nouveaux comme pour les plus chevronés n'hésitez pas à vous inscrire ! 
             </p>
         </div>
         <div class="grey-block-content">
@@ -21,7 +23,15 @@
                 DETAILS
             </h2>
             <p class="grey-block-text">
-                Lorem ipsum dolor sit amet. Sed doloribus id eligendi rerum eos impedit dolore eos excepturi quisquam et corporis Quis At sunt voluptatem ex ullam dolorum. Et corrupti tempore id voluptatibus atque eos itaque enim non impedit laudantium est excepturi sunt et quia saepe! Non accusantium quia id culpa iure sed fugiat optio a reiciendis ipsum eum sunt nostrum.
+                20 poneys aux écuries, distribution des rations de céréales.
+                Hippologie et théorie en salle ou aux écuries.
+                Préparation des poneys, pansage, brossage, sellage....
+                Monte (ludique pour les plus petits).
+                Rangement des écuries, des selles, des filets.
+                Pique-nique & temps calme.
+                Rebelote l'après-midi :)
+                En fin de journée, chacun sort son poney au pré.
+                Goûter et temps calme, jeux, lecture...
             </p>
         </div>
         <div class="button-stages">
