--- a/src/View/User/Includes/_stage_white_block.html.twig
+++ b/src/View/User/Includes/_stage_white_block.html.twig
@@ -1,13 +1,28 @@
 {% block stage_white_block %}
     <div class="stage-white-block-section col-xl-8 col-lg-11 offset-lg-1 m-0 col-sm-12">
         <div class="white-block-title-text">
+            <h2 class="tab-title">
+                PRESENTATION DES STAGES DE PONEY
+            </h2>
             <p class="white-block-text col-12">
-                Lorem ipsum dolor sit amet. Sed doloribus id eligendi rerum eos impedit dolore eos excepturi quisquam et corporis Quis At sunt voluptatem ex ullam dolorum. Et corrupti tempore id voluptatibus atque eos itaque enim non impedit laudantium est excepturi sunt et quia saepe! Non accusantium quia id culpa iure sed fugiat optio a reiciendis ipsum eum sunt nostrum.
+                Le centre équestre vous propose des stages de poney dans un cadre agréable au coeur de la ville de Saint Denis en Val. La prise en charge des plus jeunes se fera dans un cadre plus ludique. Hippologie et théorie seront dispensées en salle ou aux écuries.
+                Au programme : cours, sauts, dressage et cross pour les niveaux plus expérimentés.
+                Hébergement “au top !” dans un village vacances , séjour agréé et déclaré Jeunesse et Sport en séjour sportif.
+                Les stages seront encadrés par un moniteur et animateur diplômés.
             </p>
         </div>
         <div class="white-block-title-text col-12">
             <p class="white-block-text">
-                Lorem ipsum dolor sit amet. Sed doloribus id eligendi rerum eos impedit dolore eos excepturi quisquam et corporis Quis At sunt voluptatem ex ullam dolorum. Et corrupti tempore id voluptatibus atque eos itaque enim non impedit laudantium est excepturi sunt et quia saepe! Non accusantium quia id culpa iure sed fugiat optio a reiciendis ipsum eum sunt nostrum.
+                Contexte:
+                20 poneys aux écuries, distribution des rations de céréales.
+                Hippologie et théorie en salle ou aux écuries.
+                Préparation des poneys, pansage, brossage, sellage....
+                Monte (ludique pour les plus petits).
+                Rangement des écuries, des selles, des filets.
+                Pique-nique & temps calme.
+                Rebelote l'après-midi :)
+                En fin de journée, chacun sort son poney au pré.
+                Goûter et temps calme, jeux, lecture...
             </p>
         </div>
         <div class='carousel'>
