delete /br or change to p

--- a/src/View/User/Includes/_course_tab.html.twig
+++ b/src/View/User/Includes/_course_tab.html.twig
@@ -16,9 +16,9 @@
             </h2>
             <p class="tab-text">
                 Vous souhaitez découvrir le poney en famille, apprendre le dressage de poney tout en s'amusant,
-                ou vous initier au trot et au galop pour les plus jeunes? </br>
-                Vous souhaitez apprendre la cavalerie, panser, seller, monter à cheval ou encore faire de la compétition ? </br>
-                Le Haras du Val de Loire est l'endroit idéal ! </br>
+                ou vous initier au trot et au galop pour les plus jeunes? <br>
+                Vous souhaitez apprendre la cavalerie, panser, seller, monter à cheval ou encore faire de la compétition ? <br>
+                Le Haras du Val de Loire est l'endroit idéal ! <br>
                 Pour les nouveaux comme pour les plus chevronés n'hésitez pas à vous inscrire !
             </p>
         </div>
