--- a/src/View/User/Includes/_haras_white_block.html.twig
+++ b/src/View/User/Includes/_haras_white_block.html.twig
@@ -4,8 +4,8 @@
             <h2 class="title">
                 PRÉSENTATION GÉNÉRALE
             </h2>
-            <p class="white-block-text col-12">
-                Situé à 10 minutes d'Orléans centre, votre poney-club/centre équestre "Le Haras du Val de Loire" est installé sur la commune de Saint Denis en Val. </br></br>
+            <p class="white-block-text col-12 mb-5">
+                Situé à 10 minutes d'Orléans centre, votre poney-club/centre équestre "Le Haras du Val de Loire" est installé sur la commune de Saint Denis en Val.
             </p>
         </div>
         <div class="white-block-title-text col-12">
