--- a/src/View/User/Includes/_show_courses.html.twig
+++ b/src/View/User/Includes/_show_courses.html.twig
@@ -11,7 +11,7 @@
                         <li class="list-group-item d-flex col-4 col-sm-12 d-flex flex-column justify-content-center align-items-center">
                             <div class="text-card">
                                 {{ course_day.name | capitalize }}
-                                <span>({{ course_day.time | date('H:i') }})</span><br>
+                                <span>({{ course_day.time | date('H:i') }})</span>
                             </div>
                         </li>
                     {% endfor %}
