--- a/src/View/User/Includes/_welcome_background_slideshow.html.twig
+++ b/src/View/User/Includes/_welcome_background_slideshow.html.twig
@@ -5,10 +5,10 @@
             <h1 class="mt-5">Haras du Val de Loire</h1>
             <div class="card border-0">
                 <div class="card-body col-xl-6 offset-xl-3 col-sm-12">
-                    <h2 class="card-title">École d'équitation familiale</h2>
-                    <p class="card-text">Votre poney-club/centre équestre "Le Haras du Val de Loire" est installé sur la commune de Saint Denis en Val. </br></br>
-                    Vous pourrez pratiquer l'équitation en toute sécurité, avec une cavalerie adaptée et respectée selon les règles d'étholgie, à des tarifs raisonés. </br></br>
-                    Ambiance familiale et chaleureuse garantie, cette école d'équitation permet à tous de s'épanouir dans la nature, tout en faisant du sport. </br></br>
+                    <h2 class="card-title mb-5">École d'équitation familiale</h2>
+                    <p class="card-text mt-5">Votre poney-club/centre équestre "Le Haras du Val de Loire" est installé sur la commune de Saint Denis en Val.</p>
+                    <p class="card-text">Vous pourrez pratiquer l'équitation en toute sécurité, avec une cavalerie adaptée et respectée selon les règles d'étholgie, à des tarifs raisonés.</p>
+                    <p class="card-text">Ambiance familiale et chaleureuse garantie, cette école d'équitation permet à tous de s'épanouir dans la nature, tout en faisant du sport.</p>
                 </div>
             </div>
         </div>
