--- a/src/View/User/Includes/_inscription_form_stages.html.twig
+++ b/src/View/User/Includes/_inscription_form_stages.html.twig
@@ -15,7 +15,7 @@
                     <li>{{ thanks }}</li>
                 </ul>
             {% endif %}
-                <form class="form-stages" method="POST" novalidate>
+                <form class="form-stages" method="POST">
                     <div class="mb-3 field">
                         <label for="firstname" class="form-label">
                             <span class="text-danger">*</span>Prénom de l'enfant :</label>
