--- a/src/View/User/Includes/_haras_white_block.html.twig
+++ b/src/View/User/Includes/_haras_white_block.html.twig
@@ -10,7 +10,7 @@
         </div>
         <div class="white-block-title-text col-12">
             <p class="white-block-text">
-                Possibilité du plus petit (dès 18 mois) au plus grand (ados, adultes, séniors...) de découvrir l'équitation tout au long de l'année.
+                Possibilité aux plus petits (dès 18 mois) et aux plus grands (ados, adultes, séniors...) de découvrir l'équitation tout au long de l'année.
                 Vacances, stages éthologie, dressage, saut d'obstacles, rando-brunch, compétitions, visite de l'élevage poney... Beaucoup de prestations sont proposées, sans oublier les cours, pour tous niveaux.
                 Les inscriptions aux cours d'équitation et les inscriptions aux stages se font tout au long de l'année.
             </p>
