--- a/src/View/User/Includes/_stage_grey_block.html.twig
+++ b/src/View/User/Includes/_stage_grey_block.html.twig
@@ -25,7 +25,7 @@
             </p>
         </div>
         <div class="button-stages">
-            <a class="btn-inscription" type="button" href="/StageForm/inscription">
+            <a class="button-inscription" type="button" href="/StageForm/inscription">
                 JE M'INSCRIS !
             </a>
         </div>
