fix contact in grey block

--- a/src/View/User/Includes/_contact_grey_block.html.twig
+++ b/src/View/User/Includes/_contact_grey_block.html.twig
@@ -2,6 +2,9 @@
     <div class="grey-block col-xl-7 m-0 col-sm-12">
         <form class="contact-grey-title" method="POST">
             <div class="contact-grey-section">
+                <div class="tab-title-text mb-3">
+                    <h2 class="contact-grey-title">CONTACT</h2>
+                </div>
                 <div class="mb-3">
                     <label for="lastname" class="form-label">Nom</label>
                     <input type="text" class="form-control" id="lastname" name="lastname">
