Fix lorem ipsum page contact

--- a/src/View/User/Includes/_contact_white_block.html.twig
+++ b/src/View/User/Includes/_contact_white_block.html.twig
@@ -2,18 +2,18 @@
     <div class="contact-white-block-section col-xl-8 col-lg-11 offset-lg-1 m-0 col-sm-12">
         <div class="white-block-title-text">
             <h2 class="white-block-title">
-            ACCES
+                ACCES
             </h2>
             <p class="white-block-text">
-                Lorem ipsum dolor sit amet. Sed doloribus id eligendi rerum eos impedit dolore eos excepturi quisquam et corporis Quis At sunt voluptatem ex ullam dolorum. Et corrupti tempore id voluptatibus atque eos itaque enim non impedit laudantium est excepturi sunt et quia saepe! Non accusantium quia id culpa iure sed fugiat optio a reiciendis ipsum eum sunt nostrum. 
+                Nous sommes situés au coeur du parc naturel de la commune de Saint Denis en Val, à la périphérie d'Orléans, Chambéry et Annecy, à la fois dans la nature et à proximité des grands axes routiers.
             </p>
         </div>
         <div class="white-block-title-text">
             <h2 class="white-block-title">
-            INFORMATIONS
+                INFORMATIONS
             </h2>
             <p class="white-block-text">
-                Lorem ipsum dolor sit amet. Sed doloribus id eligendi rerum eos impedit dolore eos excepturi quisquam et corporis Quis At sunt voluptatem ex ullam dolorum. Et corrupti tempore id voluptatibus atque eos itaque enim non impedit laudantium est excepturi sunt et quia saepe! Non accusantium quia id culpa iure sed fugiat optio a reiciendis ipsum eum sunt nostrum. 
+                Afin de prendre contact avec notre centre d'équitation, vous pouvez accéder à un formulaire de contact sur la droite de lécran. Il vous suffit de remplir les champs indiqués dans le formulaire ci-joint, de rédiger votre demande et de cliquer sur le bouton envoyer. Nos équipes ne manquerons pas de vous répondre dans les meilleurs délais.
             </p>
         </div>
     </div>
