--- a/src/View/Admin/layout_admin.html.twig
+++ b/src/View/Admin/layout_admin.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block body %}
     {% block navbar %}
-        {% include 'Includes/_navbar.html.twig' %}
+        {% include 'Admin/Includes/_navbar.html.twig' %}
     {% endblock %}
     {% block content %}{% endblock %}
 {% endblock %}
