Fix Style et texte

--- a/src/View/User/Includes/_inscription_form_stages.html.twig
+++ b/src/View/User/Includes/_inscription_form_stages.html.twig
@@ -1,7 +1,7 @@
 {% block stages_form_inscription %}
     <div class="form col-xl-6 offset-xl-3">
         <div class="form-title">
-            <h1>Inscription aux Stages</h1>
+            <h1>Formulaire d'inscription aux stages</h1>
         </div>
         <div>
             {% if errors %}
