--- a/src/View/Admin/Includes/_formulary_stage.html.twig
+++ b/src/View/Admin/Includes/_formulary_stage.html.twig
@@ -24,6 +24,7 @@
                 Début du stage
             </label>
             <input class="form-control" type="date" name="starting_day" id="starting_day" required value="{{ formulary.starting_day }}" aria-required=" true">
+            <div id="StartingDayHelp" class="form-text ps-2">Supérieur à la date du jour</div>
         </div>
         <div class="form-group mb-3">
             <label for="ending_day">
@@ -31,6 +32,7 @@
                 Fin du stage
             </label>
             <input class="form-control" type="date" name="ending_day" id="ending_day" required value="{{ formulary.ending_day }}" aria-required=" true">
+            <div id="EndingDayHelp" class="form-text ps-2">Minimum 5 jours d'intervalle</div>
         </div>
         <div class="form-group mb-3">
             <label for="capacity">
