--- a/src/View/User/Includes/_contact_white_block.html.twig
+++ b/src/View/User/Includes/_contact_white_block.html.twig
@@ -2,19 +2,17 @@
     <div class="contact-white-block-section col-xl-8 col-lg-11 offset-lg-1 m-0 col-sm-12">
         <div class="white-block-title-text">
             <h2 class="white-block-title">
-                ACCES
+                ACCÈS
             </h2>
             <p class="white-block-text">
-                Nous sommes situés au coeur du parc naturel de la commune de Saint Denis en Val, à la périphérie d'Orléans, Chambéry et Annecy, à la fois dans la nature et à proximité des grands axes routiers.
-            </p>
+                Nous sommes situés au coeur du parc naturel de la commune de Saint Denis en Val, à la périphérie d'Orléans, à la fois dans la nature et à proximité des grands axes routiers. Juste en face du stade de football et du gymnase, un parking est disposition directement devant le Haras.            </p>
         </div>
         <div class="white-block-title-text">
             <h2 class="white-block-title">
                 INFORMATIONS
             </h2>
             <p class="white-block-text">
-                Afin de prendre contact avec notre centre d'équitation, vous pouvez accéder à un formulaire de contact sur la droite de lécran. Il vous suffit de remplir les champs indiqués dans le formulaire ci-joint, de rédiger votre demande et de cliquer sur le bouton envoyer. Nos équipes ne manquerons pas de vous répondre dans les meilleurs délais.
-            </p>
+                Afin de prendre contact avec notre centre d'équitation, vous pouvez accéder à un formulaire de contact sur la droite de l'écran. Il vous suffit de remplir les champs indiqués dans le formulaire ci-joint, de rédiger votre demande et de cliquer sur le bouton envoyer. Nos équipes ne manquerons pas de vous recontacter dans les meilleurs délais.            </p>
         </div>
     </div>
 {% endblock %}
