--- a/src/View/User/Includes/_course_tab.html.twig
+++ b/src/View/User/Includes/_course_tab.html.twig
@@ -5,7 +5,7 @@
                 CONDITIONS
             </h2>
             <p class="tab-text">
-                A partir de 18 mois pour le Baby-Poney, jusqu'à un haut niveau d'équitation.
+                A partir de 1 an pour le Baby-Poney, jusqu'à un haut niveau d'équitation.
                 Équipement obligatoire prêté par le Haras pour les plus petits. Pantalon long, bottes et
                 casque/bombe obligatoire pour les plus grands.
             </p>
