--- a/src/View/User/Includes/_inscription_form_stages.html.twig
+++ b/src/View/User/Includes/_inscription_form_stages.html.twig
@@ -56,13 +56,13 @@
                         <label for="parentfirstname" class="form-label">
                             <span class="text-danger">*</span> Prénom du parent :
                         </label>
-                        <input type="text" class="form-control" id="parentfirstname" name="parentfirstname" placeholder="Laurie" required value="{{ stage.parent_firstname }}" aria-required="true">
+                        <input type="text" class="form-control" id="parentfirstname" name="parentfirstname" placeholder="Laurie" required value="{{ stage.parentfirstname }}" aria-required="true">
                     </div>
                     <div class="mb-3 field">
                         <label for="parentlastname" class="form-label">
                             <span class="text-danger">*</span> Nom du parent :
                         </label>
-                        <input type="text" class="form-control" id="parentlastname" name="parentlastname" placeholder="Merlier" required value="{{ stage.parent_lastname }}" aria-required="true">
+                        <input type="text" class="form-control" id="parentlastname" name="parentlastname" placeholder="Merlier" required value="{{ stage.parentlastname }}" aria-required="true">
                     </div>
                     <div class="mb-3 field">
                         <label for="email" class="form-label">
@@ -74,7 +74,7 @@
                         <label for="phone" class="form-label">
                             <span class="text-danger">*</span> Téléphone :
                         </label>
-                        <input type="text" class="form-control" id="phone" name="phone" placeholder="06.00.00.00.00" required value="{{ stage.phone_number }}" aria-required="true">
+                        <input type="text" class="form-control" id="phone" name="phone" placeholder="06.00.00.00.00" required value="{{ stage.phone }}" aria-required="true">
                     </div>
                     <button class="inscription-button">{{ button_name }}</button>
                 </form>
