--- a/src/View/User/Includes/_stage_grey_block.html.twig
+++ b/src/View/User/Includes/_stage_grey_block.html.twig
@@ -5,7 +5,7 @@
                 CONDITIONS
             </h2>
             <p class="grey-block-text">
-                A partir de 18 mois pour le Baby-Poney, jusqu'à un haut niveau d'équitation. Équipement obligatoire prêté par le Haras pour les plus petits. Pantalon long, bottes et casque/bombe obligatoire pour les plus grands.             </p>
+                A partir de 1 an pour le Baby-Poney, jusqu'à un haut niveau d'équitation. Équipement obligatoire prêté par le Haras pour les plus petits. Pantalon long, bottes et casque/bombe obligatoire pour les plus grands.             </p>
         </div>
         <div class="grey-block-content">
             <h2 class="grey-block-title">
@@ -20,7 +20,7 @@
         </div>
         <div class="grey-block-content">
             <h2 class="grey-block-title">
-                DETAILS
+                DÉTAILS
             </h2>
             <p class="grey-block-text">
                 20 poneys aux écuries, distribution des rations de céréales.
