--- a/src/View/User/Includes/_stage_white_block.html.twig
+++ b/src/View/User/Includes/_stage_white_block.html.twig
@@ -2,12 +2,12 @@
     <div class="stage-white-block-section col-xl-8 col-lg-11 offset-lg-1 m-0 col-sm-12">
         <div class="white-block-title-text">
             <h2 class="tab-title">
-                PRESENTATION DES STAGES DE PONEY
+                PRÉSENTATION DES STAGES DE PONEY
             </h2>
             <p class="white-block-text col-12">
                 Le centre équestre vous propose des stages de poney dans un cadre agréable au coeur de la ville de Saint Denis en Val. La prise en charge des plus jeunes se fera dans un cadre plus ludique. Hippologie et théorie seront dispensées en salle ou aux écuries.
                 Au programme : cours, sauts, dressage et cross pour les niveaux plus expérimentés.
-                Hébergement “au top !” dans un village vacances , séjour agréé et déclaré Jeunesse et Sport en séjour sportif.
+                Hébergement “au top !” dans un village vacance , séjour agréé et déclaré Jeunesse et Sport en séjour sportif.
                 Les stages seront encadrés par un moniteur et animateur diplômés.
             </p>
         </div>
