--- a/src/View/User/Includes/_contact_grey_block.html.twig
+++ b/src/View/User/Includes/_contact_grey_block.html.twig
@@ -16,27 +16,27 @@
                 <div class="mb-3">
                     <label for="lastname" class="form-label">
                         <span class="text-danger">*</span>Nom</label>
-                    <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Merlier" aria-required="true">
+                    <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Merlier" aria-required="true" required>
                 </div>
                 <div class="mb-3">
                     <label for="firstname" class="form-label">
                         <span class="text-danger">*</span>Prénom</label>
-                    <input type="text" class="form-control" id="firstname" name="firstname" placeholder="Delphine" aria-required="true">
+                    <input type="text" class="form-control" id="firstname" name="firstname" placeholder="Delphine" aria-required="true" required>
                 </div>
                 <div class="mb-3">
                     <label for="phone" class="form-label">
                         <span class="text-danger">*</span>Téléphone</label>
-                    <input type="tel" class="form-control" id="phone" name="phone" placeholder="06.00.00.00.00." aria-required="true">
+                    <input type="tel" class="form-control" id="phone" name="phone" placeholder="06.00.00.00.00." aria-required="true" required>
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">
                         <span class="text-danger">*</span>Email</label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="jean.tie@poney.com" aria-required="true">
+                    <input type="email" class="form-control" id="email" name="email" placeholder="jean.tie@poney.com" aria-required="true" required>
                 </div>
                 <div class="mb-3">
                     <label for="message" class="form-label">
                         <span class="text-danger">*</span>Message</label>
-                    <textarea class="form-control" id="message" name="message" placeholder="Bonjour, ..." rows="3" aria-required="true"></textarea>
+                    <textarea class="form-control" id="message" name="message" placeholder="Bonjour, ..." rows="3" aria-required="true" required></textarea>
                 </div>
                 <button class="button">Envoyer</button>
             </div>
