--- a/src/View/User/Includes/_show_stages.html.twig
+++ b/src/View/User/Includes/_show_stages.html.twig
@@ -1,20 +1,20 @@
 <div class="container mt-5 pt-5">
     <table class="table table-striped table-hover text-center align-middle">
         <thead>
-            <tr>
-                <th scope="col">Nom du stage</th>
-                <th scope="col">Date de début</th>
-                <th scope="col">Date fin</th>
-                <th scope="col">Age minimun</th>
+            <tr class="align-sm-middle">
+                <th scope="col" class="p-1 p-sm-2">Nom du stage</th>
+                <th scope="col" class="p-1 p-sm-2">Date de début</th>
+                <th scope="col" class="p-1 p-sm-2">Date fin</th>
+                <th scope="col" class="p-1 p-sm-2">Age minimun</th>
             </tr>
         </thead>
         <tbody>
             {% for stage in stages %}
                 <tr>
-                    <td>{{ stage.name | capitalize }}</td>
-                    <td>{{ stage.starting_day | date('d/m/Y') }}</td>
-                    <td>{{ stage.ending_day | date('d/m/Y') }}</td>
-                    <td>{{ stage.age }} an(s)</td>
+                    <td class="p-1 p-sm-2">{{ stage.name | capitalize }}</td>
+                    <td class="p-1 p-sm-2">{{ stage.starting_day | date('d/m/y') }}</td>
+                    <td class="p-1 p-sm-2">{{ stage.ending_day | date('d/m/y') }}</td>
+                    <td class="p-1 p-sm-2">{{ stage.age }} an(s)</td>
                 </tr>
             {% endfor %}
         </tbody>
