--- a/src/View/User/Includes/_contact_white_block.html.twig
+++ b/src/View/User/Includes/_contact_white_block.html.twig
@@ -5,14 +5,16 @@
                 ACCÈS
             </h2>
             <p class="white-block-text">
-                Nous sommes situés au coeur du parc naturel de la commune de Saint Denis en Val, à la périphérie d'Orléans, à la fois dans la nature et à proximité des grands axes routiers. Juste en face du stade de football et du gymnase, un parking est disposition directement devant le Haras.            </p>
+                Nous sommes situés au coeur du parc naturel de la commune de Saint Denis en Val, à la périphérie d'Orléans, à la fois dans la nature et à proximité des grands axes routiers. Juste en face du stade de football et du gymnase, un parking est disposition directement devant le Haras.
+            </p>
         </div>
         <div class="white-block-title-text">
             <h2 class="white-block-title">
                 INFORMATIONS
             </h2>
             <p class="white-block-text">
-                Afin de prendre contact avec notre centre d'équitation, vous pouvez accéder à un formulaire de contact sur la droite de l'écran. Il vous suffit de remplir les champs indiqués dans le formulaire ci-joint, de rédiger votre demande et de cliquer sur le bouton envoyer. Nos équipes ne manquerons pas de vous recontacter dans les meilleurs délais.            </p>
+                Afin de prendre contact avec notre centre d'équitation, vous pouvez accéder à un formulaire de contact sur la droite de l'écran. Il vous suffit de remplir les champs indiqués dans le formulaire ci-joint, de rédiger votre demande et de cliquer sur le bouton envoyer. Nos équipes ne manquerons pas de vous recontacter dans les meilleurs délais.
+            </p>
         </div>
     </div>
 {% endblock %}
