--- a/src/View/User/Includes/_haras_white_block.html.twig
+++ b/src/View/User/Includes/_haras_white_block.html.twig
@@ -5,14 +5,14 @@
                 PRÉSENTATION GÉNÉRALE
             </h2>
             <p class="white-block-text col-12 mb-5">
-                Situé à 10 minutes d'Orléans centre, votre poney-club/centre équestre "Le Haras du Val de Loire" est installé sur la commune de Saint Denis en Val.
+                Situé à 10 minutes d'Orléans centre, votre <span>poney</span>-club/centre <span>équestre</span> "Le <span>Haras</span> du Val de Loire" est installé sur la commune de Saint Denis en Val.
             </p>
         </div>
         <div class="white-block-title-text col-12">
             <p class="white-block-text">
-                Possibilité aux plus petits (dès 18 mois) et aux plus grands (ados, adultes, séniors...) de découvrir l'équitation tout au long de l'année.
+                Possibilité aux plus petits (dès 18 mois) et aux plus grands (ados, adultes, séniors...) de découvrir l'<span>équitation</span> tout au long de l'année.
                 Vacances, stages éthologie, dressage, saut d'obstacles, rando-brunch, compétitions, visite de l'élevage poney... Beaucoup de prestations sont proposées, sans oublier les cours, pour tous niveaux.
-                Les inscriptions aux cours d'équitation et les inscriptions aux stages se font tout au long de l'année.
+                Les inscriptions aux cours d'équitation et les inscriptions aux <span>stages</span> se font tout au long de l'année.
             </p>
             {% include 'User/Includes/_haras_googlemap.html.twig' %}
         </div>
