--- a/src/View/User/Includes/_stage_white_block.html.twig
+++ b/src/View/User/Includes/_stage_white_block.html.twig
@@ -5,23 +5,23 @@
                 PRÉSENTATION DES STAGES DE PONEY
             </h2>
             <p class="white-block-text col-12">
-                Le centre équestre vous propose des stages de poney dans un cadre agréable au coeur de la ville de Saint Denis en Val. La prise en charge des plus jeunes se fera dans un cadre plus ludique. Hippologie et théorie seront dispensées en salle ou aux écuries.
+                Le <span>centre équestre</span> vous propose des <span>stages de poney</span> dans un cadre agréable au coeur de la ville de <span>Saint Denis en Val</span>. La prise en charge des plus jeunes se fera dans un cadre plus ludique. Hippologie et théorie seront dispensées en salle ou aux écuries.
                 Au programme : cours, sauts, dressage et cross pour les niveaux plus expérimentés.
-                Hébergement “au top !” dans un village vacance , séjour agréé et déclaré Jeunesse et Sport en séjour sportif.
-                Les stages seront encadrés par un moniteur et animateur diplômés.
+                Hébergement “au top !” dans un village <span>vacance</span> , séjour agréé et déclaré Jeunesse et Sport en séjour sportif.
+                Les <span>stages</span> seront encadrés par un moniteur et animateur diplômés.
             </p>
         </div>
         <div class="white-block-title-text col-12">
             <p class="white-block-text">
                 Contexte:
-                20 poneys aux écuries, distribution des rations de céréales.
+                20 <span>poneys</span> aux écuries, distribution des rations de céréales.
                 Hippologie et théorie en salle ou aux écuries.
-                Préparation des poneys, pansage, brossage, sellage....
+                Préparation des <span>poneys</span>, pansage, brossage, sellage....
                 Monte (ludique pour les plus petits).
                 Rangement des écuries, des selles, des filets.
                 Pique-nique & temps calme.
                 Rebelote l'après-midi :)
-                En fin de journée, chacun sort son poney au pré.
+                En fin de journée, chacun sort son <span>poney</span> au pré.
                 Goûter et temps calme, jeux, lecture...
             </p>
         </div>
