--- a/src/View/User/Includes/_course_white_block.html.twig
+++ b/src/View/User/Includes/_course_white_block.html.twig
@@ -5,7 +5,7 @@
                 AGRÉMENTS ET QUALITÉS
             </h2>
             <p class="white-block-text col-12">
-                Le centre équestre, soutenu par la ville de Saint Denis en Val, est agréé label qualité FFE (Fédération Française d'Equitation), ce qui nous autorise à utiliser les méthodes et le matériel spécifiques de l'équitation à poney et à faire passer les examens appropriés. Ce poney-club, proche d'Orléans, met à la disposition de vos enfants une cavalerie adaptée à leur niveau ainsi que des installations qui leur permettront de pratiquer l’équitation en toute sécurité. Les plus jeunes pourront apprendre à monter tout en s'amusant, d'abord avec de petits poneys, bien à leur taille, puis sur des montures plus grandes.
+                Le <span>centre équestre</span>, soutenu par la ville de Saint Denis en Val, est agréé label qualité FFE (Fédération Française d'Equitation), ce qui nous autorise à utiliser les méthodes et le matériel spécifiques de l'équitation à poney et à faire passer les examens appropriés. Ce poney-club, proche d'<span>Orléans</span>, met à la disposition de vos enfants une cavalerie adaptée à leur niveau ainsi que des installations qui leur permettront de pratiquer l’équitation en toute sécurité. Les plus jeunes pourront apprendre à monter tout en s'amusant, d'abord avec de petits poneys, bien à leur taille, puis sur des montures plus grandes.
             </p>
         </div>
         <div class='carousel'>
