--- a/src/View/User/Includes/_course_tab.html.twig
+++ b/src/View/User/Includes/_course_tab.html.twig
@@ -37,7 +37,7 @@
                 </button>
                 <div class="collapse" id="collapse{{ loop.index }}">
                     <div class="card" style="width: 18rem;">
-                        <img src="https://picsum.photos/id/1024/300/300" class="card-img-top" alt="Baby Poney Photo">
+                        <img src="https://images.unsplash.com/photo-1485201567137-7771be2f710c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1266&q=801024/300/300" class="card-img-top" alt="Baby Poney Photo">
                         <div class="card-body">
                             <ul class="card-text">
                                 <li>
