--- a/src/View/User/stage.html.twig
+++ b/src/View/User/stage.html.twig
@@ -3,7 +3,7 @@
     <link rel='stylesheet' href='/assets/css/stage.css'>
 {% endblock %}
 {% block content %}
-    {% include 'Includes/_banner.html.twig' with {image: 'banner.jpg', alt: 'pony', title: 'STAGES'} %}
+    {% include 'Includes/_banner.html.twig' with {image: 'bannerstage.jpg', alt: 'pony', title: 'STAGES'} %}
     <div class='content-page'>
         <div class='left-page'>
             {% include 'User/Includes/_stage_white_block.html.twig' %}
